--- a/2.认识O(NlogN)的排序/cpp/CMakeLists.txt
+++ b/2.认识O(NlogN)的排序/cpp/CMakeLists.txt
@@ -4,3 +4,5 @@ project(algorithm)
 
 add_executable(get_max src/get_max.cpp)
 add_executable(merge_sort src/merge_sort.cpp)
+add_executable(small_sum src/small_sum.cpp)
+add_executable(quick_sort src/quick_sort.cpp)
